--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8" />
-<title>Bingo Profesional — Orbita 3D</title>
+<title>Bingo Bosa Estación</title>
 
 <style>
     body {
